Dark mode fix

--- a/assets/sass/components/milestone.scss
+++ b/assets/sass/components/milestone.scss
@@ -203,4 +203,14 @@ iam-milestone {
       font-size: 0.75rem;
     }
   }
+
+  @media (prefers-color-scheme: dark) {
+
+    --theme: light;
+    
+    > * {
+      color: var(--colour-heading);
+    }
+    
+  }
 }
